adapt to squid god

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="description"
-      content="Olympus utilizes Treasury Reserves to enable long-term price consistency and scarcity within an infinite supply system"
+      content="Squid God utilizes Treasury Reserves to enable long-term price consistency and scarcity within an infinite supply system"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
